<resources>
    <string name="app_name">Brasil Quiz</string>
    <string name="_1_qual_a_capital_do_brasil">1. Qual a Capital do Brasil ?</string>
    <string name="brasilia">Brasilia</string>
    <string name="fortaleza">Fortaleza</string>
    <string name="belo_horizonte">Belo Horizonte</string>
    <string name="jo_o_pessoa">João Pessoa</string>
    <string name="_2_qual_o_maior_rio_do_brasil">2. Qual o maior rio do Brasil ?</string>
    <string name="rio_s_o_francisco">Rio São Francisco</string>
    <string name="rio_jaguaribe">Rio Jaguaribe</string>
    <string name="rio_amazonas">Rio Amazonas</string>
    <string name="rio_coc">Rio Cocó</string>
    <string name="_3_qual_a_capital_do_estado_do_cear">3. Qual a Capital do Estado do Ceará ?</string>
    <string name="_4_qual_o_esporte_mais_popular_do_brasil">4. Qual o esporte mais popular do Brasil ?</string>
    <string name="_5_qual_a_maior_cidade_do_brasil">5. Qual a maior cidade do Brasil ?</string>
    <string name="s_o_paulo">São Paulo</string>
    <string name="porto_alegre">Porto Alegre</string>
    <string name="palmas">Palmas</string>
    <string name="_6_quais_os_tr_s_principais_rios_do_brasil">6. Quais os três principais rios do Brasil ?</string>
    <string name="amazonas">Amazonas</string>
    <string name="paran">Paraná</string>
    <string name="madeira">Madeira</string>
    <string name="jaguaribe">Jaguaribe</string>
    <string name="_7_o_brasil_o_maior_pa_s_do_mundo_em_territ_rio">7. O Brasil é o maior país do mundo em território ?</string>
    <string name="sim">Sim</string>
    <string name="n_o">Não</string>
    <string name="_8_qual_a_capital_do_brasil">8. Qual a Capital do Brasil ?</string>
    <string name="aquiraz">Aquiraz</string>
    <string name="_9_s_o_2_cores_da_bandeira_do_brasil">9. São 2 Cores da Bandeira do Brasil:</string>
    <string name="vermelho">Vermelho</string>
    <string name="azul">Azul</string>
    <string name="preto">Preto</string>
    <string name="verde">Verde</string>
    <string name="_10_quantas_estrelas_existem_na_bandeira_do_brasil">10. Quantas estrelas existem na bandeira do Brasil ?</string>
    <string name="_23_estrelas">23 Estrelas</string>
    <string name="_27_estrelas">27 Estrelas</string>
    <string name="enviar_respostas">Enviar Respostas</string>
    <string name="voc_conhece_o_brasil_n_responda_as_perguntas_abaixo">Você conhece o Brasil ?   Responda as perguntas abaixo</string>
</resources>
